# aiops-ai-agent-tool-calling

./: .env.example  .gitignore  API_README.md  CLAUDE.md  DEPENDENCY_TOOL_COMPARISON.md  Dockerfile  GITHUB_MCP_SETUP.md  MCP_STDIO_FIX.md  README.md  SLACK_COMPARISON.md  api_server.py  auto_update_dependencies.py  dependency_analyzer.py  dependency_operations.py  dependency_update_agent.py  dependency_updater.py  diagnose_github_mcp.py  docker-compose.yml  find_docker_path.py  github_mcp_client.py  outdated_repo_finder.py  pyproject.toml  repository_cache.py  requirements.txt  smart_dependency_updater.py  test_github_mcp.py  test_mcp_stdio.py  test_pip_outdated_fix.py
src/agents/: __init__.py  analyzer.py  orchestrator.py  updater.py
src/api/: server.py  startup.py
src/callbacks/: agent_activity.py
src/cli/: diagnose.py
src/config/: language_map.py  logging.conf
src/integrations/: github_mcp_client.py  mcp_server_manager.py
src/tools/: dependency_ops.py
src/utils/: docker.py
tests/: .env.test.example  README.md  __init__.py  conftest.py  test_dependency_analyzer.py  test_dependency_operations.py  test_github_mcp_client.py  test_repository_cache.py  test_smart_dependency_updater.py
