[project]
name = "ai-dependency-updater"
version = "1.0.0"
description = "Multi-agent AI system for automated dependency management"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.2.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
dep-updater = "src.agents.orchestrator:main"
dep-server = "src.api.startup:main"
dep-diagnose = "src.cli.diagnose:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
